// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Language switcher renders renders the structure with language list and selected default language 1`] = `
<DocumentFragment>
  <div
    class="widget-language-selector popupmenu"
  >
    <div
      class="popupmenu-trigger popupmenu-trigger-alignement"
      style="display: flex; align-items: center;"
    >
      <span
        class="current-language-text"
      >
        En us
      </span>
      <span
        aria-hidden="true"
        class="glyphicon glyphicon-chevron-down"
      />
    </div>
    <div
      class="popupmenu-menu popupmenu-position-left"
    >
      <div
        class="popupmenu-basic-item"
      >
        En us
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Language switcher renders the structure with empty language list 1`] = `
<DocumentFragment>
  <div
    class="widget-language-selector popupmenu"
  >
    <div
      class="popupmenu-trigger popupmenu-trigger-alignement"
      style="display: flex; align-items: center;"
    >
      <span
        class="current-language-text"
      />
      <span
        aria-hidden="true"
        class="glyphicon glyphicon-chevron-down"
      />
    </div>
    <div
      class="popupmenu-menu popupmenu-position-left"
    />
  </div>
</DocumentFragment>
`;
